--- a/Censo.API/Censo.API/Properties/launchSettings.json
+++ b/Censo.API/Censo.API/Properties/launchSettings.json
@@ -14,6 +14,7 @@
       "launchBrowser": true,
       "launchUrl": "weatherforecast",
       "environmentVariables": {
+        "Key": "Value",
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
@@ -22,14 +23,24 @@
       "launchBrowser": true,
       "launchUrl": "weatherforecast",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "SQL_SERVER_PASSWORD": "Root@123",
+        "SQL_SERVER_USER": "sa",
+        "SQL_SERVER_DATABASE": "census",
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "SQL_SERVER_HOST": "localhost"
       },
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
     },
     "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/weatherforecast",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/",
+      "environmentVariables": {
+        "SQL_SERVER_PASSWORD": "Root@123",
+        "SQL_SERVER_USER": "sa",
+        "SQL_SERVER_DATABASE": "Census",
+        "SQL_SERVER_HOST": "localhost"
+      },
       "publishAllPorts": true,
       "useSSL": true
     }
