Começando a organizar o docker compose

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,9 @@
  version: 2.1
 
- orbs:
-  win: circleci/windows@2.2.0
-
  jobs:
    build:
-     executor: win/default     
+     docker:
+       - image: circleci/ruby:2.4.1  
     
      steps:
        - checkout
