--- a/Censo.API/Censo.API/Properties/launchSettings.json
+++ b/Censo.API/Censo.API/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "Key": "Value",
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -21,7 +21,7 @@
     "Censo.API": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "region",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "SQL_SERVER_PASSWORD": "Root@123",
         "SQL_SERVER_USER": "sa",
@@ -34,7 +34,7 @@
     "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/weatherforecast",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
       "publishAllPorts": true,
       "useSSL": true
     }
