--- a/Censo.API/Censo.API/Censo.API.csproj
+++ b/Censo.API/Censo.API/Censo.API.csproj
@@ -14,6 +14,7 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DocumentationFile>C:\dev\projetos\NETCore\Censo\Censo.API\Censo.API\Censo.API.xml</DocumentationFile>
+    <NoWarn>1701;1702;1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
