--- a/Censo.API/docker-compose.yml
+++ b/Censo.API/docker-compose.yml
@@ -4,9 +4,10 @@ services:
     image: "mcr.microsoft.com/mssql/server:latest"
     ports:
       - "1433:1433"      
+    user: "0:0"
     environment:
-      ACCEPT_EULA: Y
-      SA_PASSWORD: Root@123
+      - ACCEPT_EULA=Y
+      - SA_PASSWORD=Root@123
   web:    
     build: .
     depends_on:
@@ -15,7 +16,8 @@ services:
       - "8080:4321"      
     environment:
       - ASPNETCORE_URLS=http://+:4321
-      - SQL_SERVER_HOST=localhost
+      - ASPNETCORE_ENVIRONMENT=Development      
+      - SQL_SERVER_HOST=sql
       - SQL_SERVER_DATABASE=census
       - SQL_SERVER_USER=sa
       - SQL_SERVER_PASSWORD=Root@123
