Revisão do Docker Compose

--- a/Censo.API/Censo.API/Properties/launchSettings.json
+++ b/Censo.API/Censo.API/Properties/launchSettings.json
@@ -20,6 +20,7 @@
     },
     "Censo.API": {
       "commandName": "Project",
+      "commandLineArgs": "--migrate",
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
