--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,10 +8,10 @@ jobs:
     steps:
         - checkout
         - run: 
-            name: Restore pckages
-            command: dotnet restore "Censo.API/Censo.API.sln"
+            name: Restore packages
+            command: dotnet restore Censo.API/Censo.API.sln
         - run:
             name: Build app
-            command: dotnet build "Censo.API/Censo.API.sln"
+            command: dotnet build Censo.API/Censo.API.sln
          
          
